syntax = "proto3";

option csharp_namespace = "CreditRatingService";

package CreditRating;

service CreditRatingCheck {
  rpc CheckCreditRequest (CreditRequest) returns (CreditReply);
}

message CreditRequest {
  int32 customerId = 1;
  int32 creditQuantity = 25000;
}

message CreditReply {
  bool isAccepted = 1;
}
